# Capstone-By-Law-Project

./: .gitignore  App.js  index.js  package-lock.json  package.json
Components/: Button.js
Postman Collections/: Postman-Collections-Backup.json
Screens/: landingPage.js  signUpPage.js
Styles/: apply_ApprovalStyles.js  signUpPageStyles.js
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
backEnd/: index.js  nlp_service.py  package-lock.json  requirements.txt
backEnd/MongoDatabaseLogic/: dbConnection.js
backEnd/routes/: index.js
backEnd/services/: api.py  bylaws.json  callToJSON.py  nlp_service.py
frontEnd/: .eslintrc.js  App.js  package-lock.json  package.json
frontEnd/Components/: ButtonPress.js  ImageViewer.js
frontEnd/Screens/: apply_Approval.js  apply_P2.js  loginPage.js  officerDashboard.js  reportViolationP1.js  reportViolationP2.js
frontEnd/Styles/: ImageViewerStyles.js  apply_P2_Styles.js  buttons-Styles.js  landingPageStyles.js  loginPageStyles.js  officerDashboard-Styles.js  reportViolationP1-Styles.js  reportViolationP2-Styles.js
frontEnd/android/: gradle.properties
frontEnd/navigation/: navigation.js
